# Home-Service-Robot

./: .gitmodules  LICENSE  README.md
scripts/: add_marker.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
src/add_markers/: package.xml
src/add_markers/src/: add_markers.cpp
src/my_robot/: HSR.rviz
src/my_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/my_robot/launch/: amcl.launch  mapping.launch  robot_description.launch  teleop.launch  world.launch
src/my_robot/maps/: map_generated.pgm  map_generated.yaml
src/my_robot/realsense2_camera/scripts/: rs2_listener.py
src/my_robot/urdf/: my_robot.xacro
src/pick_objects/: package.xml
src/pick_objects/src/: pick_objects.cpp
src/slam_gmapping/gmapping/launch/: slam_gmapping_pr2.launch
